--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.26.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "react-to-print": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
